# experimental_rust

./: .gitignore  README.md
experimental-rust-sqlite-query/: Cargo.toml  cats.db
experimental-rust-sqlite-query/src/: main.rs
learnoptional/: Cargo.toml
learnoptional/src/: main.rs
rust-open_text_file/: Cargo.toml
rust-open_text_file/src/: main.rs
rust-ownership/src/: main.rs  simple.rs
rust-strings-wtf/: Cargo.toml
rust-strings-wtf/src/: main.rs
rust-test-simple-sqlite/: Cargo.toml
rust-test-simple-sqlite/src/: main.rs
rust-test-sqlite/: Cargo.toml
rust-test-sqlite/src/: main.rs
rust_query_list_ibooks/: Cargo.toml  READMD.me
rust_query_list_ibooks/src/: annotations.rs  book.rs  bookinfo.rs  db.rs  filesys.rs  main.rs  utils.rs
rustripregex/: Cargo.toml  README.md
rustripregex/src/: main.rs
ruststress/: Cargo.toml
ruststress/src/: main.rs
ruststrip/: Cargo.toml
ruststrip/src/: main.rs
test-struct-ellipse/: Cargo.toml
test-struct-ellipse/src/: main.rs
vec-test/src/: main.rs
vec-test/vector-test-optional/: Cargo.toml
vec-test/vector-test-optional/src/: main.rs
