[package]
name = "rust_query_list_ibooks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.28.0", features = ["modern_sqlite"]}
dirs = "3.0.2"
tabled = "0.10.0"
regex = "1.7.1"
clap = { version = "4.0", features = ["cargo"] }